# pvp_amm_challenge

./: .dockerignore  .gitignore  20250210-n-way-multi-strategy-match.md  DEPLOYMENT_GUIDE.md  Dockerfile  MVP_PLAN.md  N_WAY_IMPLEMENTATION_COMPLETE.md  README.md  README_PVP.md  SETUP_COMPLETE.md  TESTING.md  pyproject.toml  pytest.ini  railway.toml  requirements-pvp.txt  setup_and_run.sh  start.sh
.github/workflows/: economic-tests.yml
.streamlit/: config.toml
amm_competition/: __init__.py  cli.py
amm_competition/competition/: __init__.py  config.py  match.py
amm_competition/core/: __init__.py  amm.py  interfaces.py  trade.py
amm_competition/evm/: __init__.py  adapter.py  baseline.py  compiler.py  executor.py  validator.py
amm_competition/market/: __init__.py  arbitrageur.py  price_process.py  retail.py  router.py
amm_sim_rs/: Cargo.toml  README.md  pyproject.toml
amm_sim_rs/benches/: simulation_bench.rs
amm_sim_rs/src/: lib.rs
amm_sim_rs/src/amm/: cfmm.rs  mod.rs
amm_sim_rs/src/evm/: mod.rs  strategy.rs
amm_sim_rs/src/market/: arbitrageur.rs  mod.rs  price_process.rs  retail.rs  router.rs
amm_sim_rs/src/simulation/: engine.rs  mod.rs  runner.rs
amm_sim_rs/src/types/: config.rs  mod.rs  result.rs  trade_info.rs  wad.rs
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: AMMStrategyBase.sol  IAMMStrategy.sol  IFeeStructure.sol  StarterStrategy.sol  VanillaStrategy.sol
contracts/src/examples/: TieredFeeStrategy.sol
contracts/test/: Strategy.t.sol  TieredFeeStrategy.t.sol
docs/: quick-reference.md
docs/planning/: economic-testing.md  edge-case-testing.md  requirements.md  slide-deck-plan.md  tiered-fee-routing.md
docs/presentations/: code-examples.md  content.md  presenter-notes.md  visuals.md
pvp_app/: __init__.py  app.py  database.py  match_manager.py  seed_data.py  stats.py  visualizations.py
pvp_app/migrations/: 001_n_way_support.py  __init__.py
tests/: BACKWARD_COMPATIBILITY.md  CONVERGENCE_QUICK_REFERENCE.md  DETERMINISM_TESTS.md  EDGE_CASES_DOCUMENTATION.md  MAINTENANCE.md  NO_ARBITRAGE_QUICK_REFERENCE.md  QUICKSTART.md  README.md  TEST_ARCHITECTURE.md  TEST_NO_ARBITRAGE_SUMMARY.md  __init__.py  conftest.py  test_accounting_correctness.py  test_backward_compatibility.py  test_convergence_stability.py  test_convergence_stability_README.md  test_determinism.py  test_economic_fixtures.py  test_edge_cases.py  test_fee_tiers.py  test_fixtures_example.py  test_no_arbitrage.py  test_optimal_routing.py  test_router_convergence.py  test_symmetry_fairness.py  test_tiered_routing.py
tests/fixtures/: README.md  __init__.py  economic_fixtures.py
tests/utils/: __init__.py  convergence_validator.py  demo_backward_compatibility.py  economic_verification.py  fixture_verifier.py  run_convergence.py  verify_backward_compatibility.py  version_comparison.py
