[package]
name = "amm_sim_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance AMM simulation engine for fee algorithm competition"

[lib]
name = "amm_sim_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# EVM execution - minimal features only (no c-kzg/blst which require C compiler)
# We only need basic contract execution, not EIP-4844 blob support
revm = { version = "18", default-features = false, features = ["std"] }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Parallelism
rayon = "1.10"

# Random number generation (PCG for reproducibility)
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"

# Utilities
thiserror = "1.0"

# derive_more needs explicit features
derive_more = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulation_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
